Adding conceptual designs 4 and 5 and adjusting language on design criteria, needs finding, and project goals.

--- a/conceptual-design-3.html
+++ b/conceptual-design-3.html
@@ -187,7 +187,8 @@
     </main>
     <footer>
         <nav>
-            <a href="/index.html">Home</a><a href="/conceptual-design.html">Next - Conceptual Design</a>
+            <a href="/index.html">Home</a><a href="/conceptual-design.html">Conceptual Design Home</a><a
+          href="/conceptual-design-4.html">Next - Conceptual Design - Concept 4</a>
         </nav>
         <div class="centered big-margin"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img
                 alt="Creative Commons License" style="border-width:0"
