--- a/conceptual-design.html
+++ b/conceptual-design.html
@@ -46,13 +46,25 @@
                 immediate on rising, before doing anything else.
             </li>
         </ul>
-        <p><a href="/conceptual-design-1.html">Conceptual Design - Concept 1</a></p>
+        <p><a href="/conceptual-design-1.html">Concept 1</a></p>
 
-        <p><a href="/conceptual-design-2.html">Conceptual Design - Concept 2</a></p>
+        <p><a href="/conceptual-design-2.html">Concept 2</a></p>
 
-        <p><a href="/conceptual-design-3.html">Conceptual Design - Concept 3</a></p>
+        <p><a href="/conceptual-design-3.html">Concept 3</a></p>
 
-        <h3>Discussion</h3>
+
+        <h3>Alternative Approaches</h3>
+
+        <p>These approaches are targeted at solving one of the user needs, one in a once-a-day scenario, and the other in a
+        throughout-the-day format.</p>
+
+        <p><a href="/conceptual-design-4.html">Concept 4</a></p>
+
+        <p><a href="/conceptual-design-5.html">Concept 5</a></p>
+
+
+
+      <h3>Discussion</h3>
 
         <p>
             Concept 3 appears to be the most promising when considering the design criteria. For users looking for a
@@ -70,7 +82,8 @@
             resources initially
             on moving forward with concept 3. The project will keep the door open for other solutions or to revisit
             these
-            concepts in the future, particularly given the iterative nature of design. The project encourages other
+            concepts in the future, particularly given the iterative nature of design. Concept 5 appears to be another very
+          rich concept for explanation given the fast opportunity to habituate a healthy change.  The project encourages other
             project teams interested to further develop any of these concepts further.
         </p>
     </main>
