--- a/design-criteria.html
+++ b/design-criteria.html
@@ -43,7 +43,7 @@
 
         <h3>Based on domain specific user research, the solution should:</h3>
         <ul>
-            <li>focus on positive habit building (from original design inquiry)</li>
+            <li>focus on positive behavior building (from original design inquiry)</li>
             <li>be an early morning activity (identified in needs finding survey #1)</li>
             <li>be time efficient - hover at or below 43 minutes to complete. Being short will also try to not
                 exacerbate lack of sleep conditions most survey respondents reported (identified in Needs Finding Survey
@@ -53,7 +53,7 @@
                 #1)
             </li>
             <li>motivate the user, encourage consistency</li>
-            <li>tap into top motivations (identified in needs finding survey #2)</li>
+            <li>be mindful of the reasons why users are attempting change and if appropriate apply supports to undergird them. (identified in needs finding survey #2)</li>
         </ul>
 
         <h3>Based on other key design needs, the solution should:</h3>
