--- a/needs-finding.html
+++ b/needs-finding.html
@@ -101,7 +101,8 @@
     into their daily routines( genders and ages).  Respondents were motivated by improving their health, reducing stress, and improving themselves, but they
     needed to see fast results.  They were most interested in getting fit and eating right, but reported having been hampered by
     lack of time, motivation, and responsibilities.  Other challenges were trouble with maintaining consistency in their routines, and with getting nearly two hours less sleep per night than recommended.
-    Participants were open to a routine up to about 40 minutes in duration, so time efficiency will be at a premium.
+    Participants were open to a routine up to about 40 minutes in duration, so time efficiency will be at a premium.  They
+    largely prefer to work on this as an early morning activity.
 
     <h2>Initial Interest Survey</h2>
 
@@ -431,24 +432,10 @@
           </li>
           <li>Hours of sleep reported: 5.9 for women and 6.6 for men.  Sleep data is notoriously problematic.  For instance,
             researchers Diane Lauderdale concluded that people with higher educated, higher paid got more sleep than average individuals, while Dan
-            Hammermesh concluded exactly the opposite.
+            Hammermesh concluded exactly the opposite.  For a fascinating discussion on the sleep measurement, please see
+              "The Economics of Sleep"  <a href="http://freakonomics.com/podcast/economics-sleep-part-1-freakonomics-radio-rebroadcast/">part 1</a> and <a href="http://freakonomics.com/podcast/economics-sleep-part-2-freakonomics-radio-rebroadcast/">part 2</a>
 
-            <ul class="nested-list">
-              <li>"The Economics of Sleep", http://freakonomics.com/podcast/economics-sleep-part-1-freakonomics-radio-rebroadcast/</li>
-              <li>“Effects of Experimental Sleep Restriction on Weight Gain, Caloric Intake, and Meal Timing in Healthy
-                Adults,” by Andrea M. Spaeth, David F. Dinges, Namni Goel (January 2013).
-              </li>
-              <li>“Inadequate Sleep Duration as a Public Health and Social Justice Problem: Can We Truly Trade Off Our
-                Daily Activities for More Sleep?” by Lauren Hale (Sleep, October 2014).
-              </li>
-              <li>“Racial Differences in Self-Reports of Sleep Duration in a Population-Based Study” by Lauren Hale and
-                D. Phuong Do (Sleep, September 2007).
-              </li>
-              <li>“Evening use of light-emitting eReaders negatively affects sleep, circadian timing, and next-morning
-                alertness” by Anne-Marie Chang, Daniel Aeschbach, Jeanne F. Duffy, and Charles A. Czeislera (Proceedings
-                of the National Academy of Sciences, 2014)
-              </li>
-            </ul>
+
           </li>
           <li>Time and Motivation far outstripped other challenges reported.</li>
           <li>62% reported they were "very interested in a free tool to support building habits</li>
@@ -557,6 +544,7 @@
 
   function toggle(selector) {
     document.querySelector(selector).toggle();
+
   }
 
   document.querySelector('template[is=dom-bind]').isExpanded = function (opened) {
