--- a/project-goals.html
+++ b/project-goals.html
@@ -42,7 +42,7 @@
         <h3>Guiding Principles</h3>
 
         <ul>
-            <li>to provide a tool or tools that support the user in building beneficial habits</li>
+            <li>to provide a tool or tools that support the user in building beneficial routines</li>
             <li>to seek to be an agent for good - respect users' privacy, empathize with their challenges, and cheer
                 their victories
             </li>
