Adding secondary research information plus formatting to needs finding

--- a/needs-finding.html
+++ b/needs-finding.html
@@ -97,13 +97,14 @@
   <main>
 
     <h2>Emerging Story</h2>
+    <div class="survey-component">
     Across the research done to date, it appears that a majority of respondents are quite interested in tools to support them with the goal of adding new behaviors
     into their daily routines( genders and ages).  Respondents were motivated by improving their health, reducing stress, and improving themselves, but they
     needed to see fast results.  They were most interested in getting fit and eating right, but reported having been hampered by
     lack of time, motivation, and responsibilities.  Other challenges were trouble with maintaining consistency in their routines, and with getting nearly two hours less sleep per night than recommended.
     Participants were open to a routine up to about 40 minutes in duration, so time efficiency will be at a premium.  They
     largely prefer to work on this as an early morning activity.
-
+    </div>
     <h2>Initial Interest Survey</h2>
 
     <div class="survey-component">
