--- a/secondary-research.html
+++ b/secondary-research.html
@@ -159,7 +159,8 @@
       System 1 thinking, on the other hand, requires far less
       conscious effort. System 1 thinking often has to do with recognizing unexpected events and seemingly
       automatic
-      memory recall.
+      memory recall.  A common belief among neuroscience researchers today is that approximately and staggeringly 95% of the time
+      we are operating on System 1 thinking. (Bobinet 2016)
       System 1 will often, with a minimum amount of data inputs, draw a quick conclusion. Computing
       four plus by four for an educated adult, recalling one's mother's name, and recalling the capital where one
       lives are examples of System 1 thought patterns. (Kahneman, 2013) As one's expertise in a subject increases, some
@@ -201,13 +202,15 @@
     </p>
 
 
-    <h4>Behaviors and Habits</h4>
+    <h4>Behaviors, Routines, and Habits</h4>
 
     <p>
       One of Merriam Webster's definitions for behavior is "anything that an organism does involving action and
       response
       to stimulation". (Behavior, www.merriam-webster.com)
       Behaviors can be one-time events or repeated occasionally or frequently.</p>
+
+
 
     <p>
       The Fogg Behavior Model is helpful for understanding whether a behavior is likely to happen.
@@ -217,11 +220,17 @@
       and triggers for maximum impact.(Fogg, behaviormodel.org)
     </p>
 
+    <p>Routines are behaviors that may require conscious thought and choices, but are practiced by a person on a regular interval,
+      such as daily, weekly, or monthly or are less scheduled in nature but still occur frequently.  </p>
+
 
     <p>
       As behaviors become more ingrained
-      and routinized through repetition in a consistent context,
-      they form habits. Habits tend to occur unconsciously. Habits may be helpful or harmful to the individual. By
+      through repetition in a consistent context,
+      they form habits. Habits tend to occur unconsciously and may provide a small emotional payoff of some form. The key element of
+      a habit is automaticity, but they don't necessarily require a scheduled component like routines. It is possible for behaviors to take on characteristics of
+      both habits and routines, being both frequent and automatic. (Fogg, "Habits Vs. Routines:  What's the difference?")
+      Habits may be helpful or harmful to the individual. By
       developing
       an understanding of habit formation and disintegration, one can better sculpt the life one wants.
     </p>
@@ -291,7 +300,7 @@
       highlighting the immense variability between subjects to solidify their habits.
       Habits involving simpler actions were built more quickly than complex ones.
       Habit formation was not appreciably impacted by missing a day.
-      Extrinsic rewards were not provided, but the subjects were allowed to select the habit to build. (Lally, 2009)
+      Extrinsic incentives were not provided, but the subjects were allowed to select the habit to build. (Lally, 2009)
     </p>
 
     <p>
@@ -305,11 +314,21 @@
       <li>fun (Kaushal, 2015)</li>
     </ol>
 
+    <h4>Summary</h4>
+    The human mind is immensely complex and designing products to positively impact individuals using insights from neuroscience,
+    cognitive science, psychology, game design, behavioral economics, and related fields is a
+    is a delicate affair.  The scientific community is constantly marching forward, in fits and starts, as these academic findings
+    make their way into published journals, the design community must digest the information and strive to be an agent of good.
+    I believe a rapidly iterative approach is required to build impactful behavior change products.  By starting with a hypothesis
+    grounded in the our latest scientific understandings, design researchers, designers, and usability testers can then adapt designs
+    after many (hopefully quick) rounds of user testing to arrive at more effective products.
   </main>
   <footer>
     <h4>Citations </h4>
 
     <p>Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior</p>
+
+    <p>Bobinet, K. (2016, May 18). Why Behavior Design is Absolutely Essential to Healthcare | Behavior Design Forum. Retrieved June 06, 2016, from http://behaviordesignforum.stanford.edu/2016/05/27/125/</p>
 
     <p>The Brain from Top to Bottom. (n.d.). Retrieved February 12, 2016, from
       http://thebrain.mcgill.ca/flash/d/d_05/d_05_cr/d_05_cr_her/d_05_cr_her.html</p>
@@ -318,17 +337,17 @@
       Retrieved February 10, 2016, from
       http://www.businessinsider.com/75-billion-devices-will-be-connected-to-the-internet-by-2020-2013-10</p>
 
-    <p>
-      Eyal, N. (2014). Hooked: How to build habit-forming products. New York, NY: Penguin Group.
-    </p>
+    <p>Eyal, N. (2014). Hooked: How to build habit-forming products. New York, NY: Penguin Group.</p>
 
-    <p>Fogg, B. (n.d.). The Behavior Grid. Retrieved March 21, 2016, from http://www.behaviorgrid.org/</p>
 
     <p>Fogg, B. (n.d.). BJ Fogg's Behavior Model. Retrieved March 20, 2016, from http://www.behaviormodel.org/</p>
 
+    <p>Fogg, B. J. (n.d.). Habits vs Routines: What's the difference? Retrieved June 06, 2016, from https://vimeo.com/166656047</p>
+
+    <p>Fogg, B. (n.d.). The Behavior Grid. Retrieved March 21, 2016, from http://www.behaviorgrid.org/</p>
+
     <p>How Do I Decide? [Television series episode]. (2015, October 28). In The Brain with David Eagleman. Austin, TX:
       PBS.</p>
-
 
     <p>Kahneman, D. (2013). Thinking Fast and Slow. Farrar, Straus and Giroux.</p>
 
