Adding secondary research

--- a/project-goals.html
+++ b/project-goals.html
@@ -32,7 +32,7 @@
 
     <header class="row">
         <div class="centered">
-            <h1>Project Details</h1>
+            <h1>Project Charter</h1>
         </div>
 
     </header>
