--- a/secondary-research.html
+++ b/secondary-research.html
@@ -100,7 +100,7 @@
       are triggered from this region and are driven by instincts.
       The limbic system, a brain shared with mammals, is the next system that evolved and is thought to be the
       seat of
-      emotion. While the reptilian brain is focused on individual survival, the mammalian brain also is concerned
+      emotion. While the reptilian brain is focused on self-preservation, the mammalian brain also is concerned
       with the
       individual in the context of a community. The neocortex, the
       latest region to evolve, is responsible for abstract reasoning.(The Brain from Top to Bottom)
@@ -130,7 +130,7 @@
     </p>
     <ul>
       <li>continuously sample and process the input of all of our senses,</li>
-      <li>within our consciousness, have access to an understandable representation of our immediate
+      <li>within our consciousness, have access to a coherent representation of our immediate
         surroundings
       </li>
       <li>keep our organs and vital systems functioning</li>
@@ -143,7 +143,7 @@
       We don't have to expend significant conscious energy to figure out the physics involved in lifting nor
       monitoring
       what muscles to flex and extend as the action unfolds to bring a glass of water to our lips.
-      In addition, an intriguing finding is that the body often interacts with the subconscious, and physiological
+      Also, an intriguing finding is that the body often interacts with the subconscious, and physiological
       indicators have been
       measured that show the subconscious and body can form accurate hunches with respect to complicated stimuli
       well before the conscious mind is aware of the same patterns. ("How do I decide? The Brain with David
@@ -159,8 +159,7 @@
       System 1 thinking, on the other hand, requires far less
       conscious effort. System 1 thinking often has to do with recognizing unexpected events and seemingly
       automatic
-      memory recall.  A common belief among neuroscience researchers today is that approximately and staggeringly 95% of the time
-      we are operating on System 1 thinking. (Bobinet 2016)
+      memory recall.
       System 1 will often, with a minimum amount of data inputs, draw a quick conclusion. Computing
       four plus by four for an educated adult, recalling one's mother's name, and recalling the capital where one
       lives are examples of System 1 thought patterns. (Kahneman, 2013) As one's expertise in a subject increases, some
@@ -178,10 +177,13 @@
     <p>
       The brain uses 20% of the body's blood supply and 20% of the oxygen, despite it only
       accounting for 2% of the total mass of the body. ("Neurons & Synapses - Memory & the Brain - The
-      Human Memory") The brain uses about the same energy as a traditional 60-watt lightbulb. (("Who is in Control? The
+      Human Memory") The brain uses roughly the same energy as a traditional 60-watt lightbulb. (("Who is in Control? The
       Brain with David Eagleman, 2015)
       Processing System 1 thinking is significantly more expensive calorically than System 2 thinking and
-      significantly slower. As a species that had
+      significantly slower.(Kahneman,
+      2013) System 2 thinking occurs at a rate of 50 bits per second, whereas our senses
+      send orders of magnitude more data at a rate of 11 million bits per second.  Thus, a common belief among neuroscience researchers today is that approximately and staggeringly 95% of the time
+      we are operating on System 1 thinking.(Bobinet 2016) As a species that had
       to exist on the savannahs of Africa with big game species that could quickly threaten our lives, having an
       efficient way to
       react to immediate existential threats with System 1 thinking was critical to our survival. System 1's
@@ -314,14 +316,17 @@
       <li>fun (Kaushal, 2015)</li>
     </ol>
 
+
+
     <h4>Summary</h4>
+    <p>
     The human mind is immensely complex and designing products to positively impact individuals using insights from neuroscience,
     cognitive science, psychology, game design, behavioral economics, and related fields is a
     is a delicate affair.  The scientific community is constantly marching forward, in fits and starts, as these academic findings
     make their way into published journals, the design community must digest the information and strive to be an agent of good.
     I believe a rapidly iterative approach is required to build impactful behavior change products.  By starting with a hypothesis
     grounded in the our latest scientific understandings, design researchers, designers, and usability testers can then adapt designs
-    after many (hopefully quick) rounds of user testing to arrive at more effective products.
+    after many (hopefully quick) rounds of user testing to arrive at more effective products.</p>
   </main>
   <footer>
     <h4>Citations </h4>
